[gd_scene load_steps=12 format=3 uid="uid://bbuqmemdvbhls"]

[ext_resource type="Script" path="res://game.gd" id="1_c117x"]
[ext_resource type="TileSet" uid="uid://cvxd1c2jqkca6" path="res://tileset.tres" id="2_2xe0w"]
[ext_resource type="Script" path="res://map.gd" id="3_46apf"]
[ext_resource type="PackedScene" uid="uid://2kn4yhl5mm4r" path="res://Timer/timer.tscn" id="4_1fc0m"]
[ext_resource type="PackedScene" uid="uid://tvcabp3qqro6" path="res://Object Spawner/object_spawner.tscn" id="5_ttn53"]
[ext_resource type="PackedScene" uid="uid://bq2iikb4a55qw" path="res://kid/kid.tscn" id="6_u1wwt"]
[ext_resource type="PackedScene" uid="uid://dqswbye2yynj6" path="res://Player/player.tscn" id="7_7h0r1"]
[ext_resource type="PackedScene" uid="uid://croyewqn3t48v" path="res://Monster/monster.tscn" id="8_jbl4w"]
[ext_resource type="Shader" path="res://Shared/invert.gdshader" id="9_ulpvy"]
[ext_resource type="Texture2D" uid="uid://du7a5pr8r0l6g" path="res://Player/assets/lightsource.png" id="10_wa3iu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ujrvi"]
shader = ExtResource("9_ulpvy")

[node name="Game" type="Node2D"]
script = ExtResource("1_c117x")
kid_count = 3
max_monsters = 100

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Map" type="TileMap" parent="."]
tile_set = ExtResource("2_2xe0w")
cell_quadrant_size = 8
format = 2
layer_0/tile_data = PackedInt32Array(131078, 1, 0, 196614, 1, 2, 262150, 1, 2, 327686, 1, 2, 393222, 1, 2, 131079, 65537, 1, 393223, 131073, 4, 458759, 131073, 0, 524295, 1, 2, 589831, 1, 2, 655367, 1, 2, 720903, 1, 2, 786439, 1, 1, 851975, 1, 2, 917511, 1, 2, 983047, 1, 2, 131080, 65537, 2, 262152, 1, 6, 327688, 1, 7, 589832, 1, 4, 786440, 65537, 1, 917512, 131073, 4, 131081, 65537, 1, 262153, 65537, 6, 327689, 65537, 7, 524297, 65537, 4, 589833, 65537, 3, 786441, 65537, 1, 131082, 65537, 1, 196618, 131073, 4, 524298, 65537, 4, 589834, 131073, 3, 786442, 65537, 1, 851978, 1, 5, 131083, 131073, 0, 196619, 1, 2, 262155, 1, 1, 393227, 1, 6, 458763, 1, 7, 786443, 65537, 1, 851979, 65537, 5, 262156, 65537, 1, 393228, 65537, 6, 458764, 65537, 7, 786444, 65537, 1, 851980, 1, 5, 262157, 65537, 2, 720909, 131073, 4, 786445, 65537, 1, 851981, 65537, 5, 262158, 65537, 1, 589838, 1, 2, 655374, 1, 2, 720910, 1, 2, 786446, 131073, 1, 262159, 131073, 0, 327695, 1, 2, 393231, 1, 2, 458767, 1, 1, 720911, 131073, 5, 458768, 65537, 1, 720912, 131073, 5, 1048592, 131073, 0, 1114128, 1, 2, 458769, 65537, 1, 458770, 65537, 1, 524306, 65537, 4, 851986, 131073, 5, 917522, 131073, 5, 458771, 65537, 1, 524307, 131073, 4, 851987, 131073, 5, 917523, 131073, 5, 458772, 65537, 1, 524308, 65537, 4, 458773, 65537, 1, 458774, 65537, 1, 262167, 1, 0, 327703, 1, 2, 393239, 1, 2, 458775, 131073, 1, 655383, 1, 0, 720919, 1, 2, 786455, 1, 1, 262168, 65537, 1, 327704, 1, 5, 655384, 131073, 0, 786456, 65537, 1, 851992, 1, 3, 983064, 1, 6, 1048600, 1, 7, 262169, 65537, 1, 327705, 65537, 5, 786457, 65537, 1, 851993, 1, 3, 983065, 65537, 6, 1048601, 65537, 7, 262170, 65537, 2, 786458, 65537, 1, 262171, 65537, 1, 524315, 1, 0, 589851, 1, 2, 655387, 1, 1, 720923, 131073, 4, 786459, 65537, 1, 851995, 131073, 4, 262172, 131073, 0, 327708, 1, 2, 393244, 1, 2, 458780, 1, 2, 655388, 131073, 0, 720924, 1, 2, 786460, 131073, 1, 851996, 1, 2, 917532, 1, 2, 983068, 1, 2, 1048604, 1, 2, 1114140, 1, 2, 458758, 1, 1, 1048583, 1, 1, 1048584, 65537, 1, 1048585, 65537, 1, 1048586, 65537, 1, 1048587, 65537, 2, 1048588, 65537, 1, 1048589, 65537, 1, 1048590, 65537, 1, 1048591, 65537, 1, 524316, 131073, 1, 1179664, 1, 1, 1179665, 65537, 1, 1179666, 65537, 1, 1179667, 65537, 1, 1179668, 65537, 2, 1179669, 65537, 1, 1179670, 65537, 1, 1179671, 65537, 1, 1179672, 65537, 2, 1179673, 65537, 1, 1179674, 65537, 1, 1179675, 65537, 1, 1179676, 131073, 1, 1114139, 131073, 4, 1114129, 1, 3, 589839, 131073, 5, 655375, 131073, 5, 786447, 131073, 5, 851983, 131073, 5, 917519, 131073, 5, 983055, 131073, 5, 589840, 131073, 5, 655376, 131073, 5, 786448, 131073, 5, 851984, 131073, 5, 917520, 131073, 5, 983056, 131073, 5, 589841, 131073, 5, 655377, 131073, 5, 720913, 131073, 5, 786449, 131073, 5, 851985, 131073, 5, 917521, 131073, 5, 983057, 131073, 5, 589842, 131073, 5, 655378, 131073, 5, 720914, 131073, 5, 786450, 131073, 5, 983058, 131073, 5, 589843, 131073, 5, 655379, 131073, 5, 720915, 131073, 5, 786451, 131073, 5, 983059, 131073, 5, 589844, 131073, 5, 655380, 131073, 5, 720916, 131073, 5, 786452, 131073, 5, 851988, 131073, 5, 917524, 131073, 5, 983060, 131073, 5, 589845, 131073, 5, 655381, 131073, 5, 720917, 131073, 5, 786453, 131073, 5, 851989, 131073, 5, 917525, 131073, 5, 983061, 131073, 5, 589846, 131073, 5, 655382, 131073, 5, 720918, 131073, 5, 786454, 131073, 5, 851990, 131073, 5, 917526, 131073, 5, 983062, 131073, 5, 524299, 131073, 5, 589835, 131073, 5, 655371, 131073, 5, 524300, 131073, 5, 589836, 131073, 5, 655372, 131073, 5, 524301, 131073, 5, 589837, 131073, 5, 655373, 131073, 5, 393225, 131073, 5, 458761, 131073, 5, 393226, 131073, 5, 458762, 131073, 5, 589847, 131073, 5, 589848, 131073, 5, 589849, 131073, 5, 655385, 131073, 5, 917527, 131073, 5, 917528, 131073, 5, 917529, 131073, 5, 917530, 131073, 5, 983063, 131073, 5, 983066, 131073, 5, 917517, 131073, 5, 983053, 131073, 5, 917518, 131073, 5, 983054, 131073, 5, 524313, 131073, 5, 524314, 131073, 5, 589850, 131073, 5, 655386, 131073, 5, 720920, 131073, 5, 720921, 131073, 5, 720922, 131073, 5, 851991, 131073, 5, 851994, 131073, 5, 1114133, 131073, 6, 1048597, 131073, 6, 1048596, 131073, 6, 1048595, 131073, 6, 1048594, 131073, 6, 1048593, 131073, 6, 1114130, 131073, 6, 1114131, 131073, 6, 1114132, 131073, 6, 1048598, 131073, 6, 1114134, 131073, 6, 1114135, 131073, 6, 1048599, 131073, 6, 1114136, 131073, 6, 1114137, 131073, 6, 1114138, 131073, 6, 1048602, 131073, 6, 1048603, 131073, 6, 983067, 131073, 6, 917531, 131073, 6, 917515, 131073, 6, 917514, 131073, 6, 917513, 131073, 6, 851977, 131073, 6, 851976, 131073, 6, 983049, 131073, 6, 983048, 131073, 6, 983050, 131073, 6, 983051, 131073, 6, 983052, 131073, 6, 917516, 131073, 6, 851982, 131073, 6, 655370, 131073, 6, 655369, 131073, 6, 655368, 131073, 6, 720904, 131073, 6, 720905, 131073, 6, 720906, 131073, 6, 720907, 131073, 6, 720908, 131073, 6, 458766, 131073, 6, 393230, 131073, 6, 327694, 131073, 6, 327693, 131073, 6, 327692, 131073, 6, 327691, 131073, 6, 327690, 131073, 6, 262154, 131073, 6, 393229, 131073, 6, 458765, 131073, 6, 524302, 131073, 6, 524303, 131073, 6, 524304, 131073, 6, 524305, 131073, 6, 458760, 131073, 6, 393224, 131073, 6, 524296, 131073, 6, 327687, 131073, 6, 262151, 131073, 6, 196615, 131073, 6, 196616, 131073, 6, 196617, 131073, 6, 524310, 131073, 6, 524309, 131073, 6, 524311, 131073, 6, 524312, 131073, 6, 458776, 131073, 6, 393240, 131073, 6, 393241, 131073, 6, 458777, 131073, 6, 458778, 131073, 6, 393242, 131073, 6, 327706, 131073, 6, 327707, 131073, 6, 393243, 131073, 6, 458779, 131073, 6)
script = ExtResource("3_46apf")

[node name="Timer" parent="." instance=ExtResource("4_1fc0m")]
offset_left = 1.0
offset_top = 2.0
offset_right = 280.0
offset_bottom = 10.0

[node name="KidSpawner" parent="." node_paths=PackedStringArray("map") instance=ExtResource("5_ttn53")]
map = NodePath("../Map")
object = ExtResource("6_u1wwt")
atlas_coords = Array[Vector2i]([Vector2i(2, 5)])

[node name="Player" parent="." instance=ExtResource("7_7h0r1")]
position = Vector2(135, 29)

[node name="MonsterSpawner" parent="." node_paths=PackedStringArray("map") instance=ExtResource("5_ttn53")]
map = NodePath("../Map")
object = ExtResource("8_jbl4w")
atlas_coords = Array[Vector2i]([Vector2i(1, 2)])

[node name="Flip" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_ujrvi")
position = Vector2(138, 83)
scale = Vector2(14.25, 11.1719)
texture = ExtResource("10_wa3iu")

[connection signal="on_completed" from="Timer" to="." method="_on_timer_on_completed"]
